<resources>
    <string name="app_name">Duck Son</string>
    <string name="app_bar_name">Duck Son Translator</string>

    <string name="translate">Translate</string>
    <string name="swapLang">Swap</string>
    <string name="translating">Translating…</string>
    <string name="up_box_hint">Input here</string>
    <string name="language_box_hint">Language</string>
    <string name="language_box_hint_src">From</string>
    <string name="language_box_hint_dst">To</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="auto_detect">Auto detect</string>
    <string name="chinese">中文</string>
    <string name="geglish">Geglish</string>
    <string name="chinglish">Chinglish</string>

    <string name="cqDialect">CQ</string>
    <string name="mandarin">Mandarin</string>

    <string name="settings">Settings</string>
    <string name="trans_options">Translator Options</string>
    <string name="chinese_dialect">Dialect</string>
    <string name="chongqing_mode">Chongqing Dialect</string>
    <string name="word_picker">Word Picker</string>
    <string name="use_same_sound">Homophone</string>
    <string name="use_base_dict">Enhanced dictionary</string>

    <!--Bottom navigation-->
    <string name="translate_navigation">Translate</string>
    <string name="dictionary_navigation">Dictionary</string>
    <string name="encrypt_navigation">Encryption</string>

    <!--Dict fragment-->
    <string name="search">Search</string>
    <string name="no_results">No results found</string>
    <string name="part_of_speech">%s.</string>
    <string name="pinyin">pinyin</string>
    <string name="cqPin">cq pin</string>
    <string name="chsRepresentative">Representative</string>
    <string name="exact_word_divider">Results</string>
    <string name="prefix_word_divider">Prefix</string>
    <string name="substring_word_divider">Substring</string>
    <string name="rough_word_divider">Rough</string>
    <string name="same_sound_divider">Homophones</string>
    <string name="duck_son_ad">Duck son</string>
    <string name="dict_searching">Searching</string>
    <string name="dict_timeout">Search time out, please try shorter words or turn homophones off</string>
    <string name="error_with_message">Error: %s</string>
    <string name="dict_search_too_long">Warning: searching long word</string>
    <string name="dict_search_too_long_msg">This word is long, which may result in app crashing. Please try shorter words or turn homophones off. Are you sure to keep searching? Translate page may be better place for sentences.</string>

    <!--Encrypt fragment-->
    <string name="key_generation">Key generation</string>
    <string name="content_encryption">Encryption</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="public_key">Public key</string>
    <string name="private_key">Private key</string>
    <string name="generate_keys">Generate keys</string>
    <string name="key_bits">Bits</string>
    <string name="generate_key_first">Please generate the keys</string>
    <string name="encrypt_field_prompt">Please input here</string>
    <string name="decrypt_field_prompt">Please input encrypted text here</string>
    <string name="public_key_input_prompt">Please input the public key</string>
    <string name="private_key_input_prompt">Please input the private key</string>
    <string name="encrypt_literal_type">Type</string>
    <string name="public_key_intro">Share the public key to your friends so they can send encrypted messages to you.</string>
    <string name="private_key_intro">Do not share the private key. You will need to decrypt messages using the private key.</string>
    <string name="fill_encrypt_content">Please input something to encrypt</string>
    <string name="fill_rsa_key">Please input the key</string>
    <string name="invalid_encrypted_text">Cannot decrypt: unknown literal "%s"</string>
    <string name="invalid_key_text">Invalid rsa key</string>
    <string name="share_public_key_title">Share the public key and invite any user to send you encrypted messages.</string>
    <string name="generate_keys_block_title">Are you sure to generate new keys?</string>
    <string name="generate_keys_block_prompt">Current keys will be lost. Any messages encrypted with current public key will be lost.</string>
    <string name="encrypt_instruction">Instructions…</string>
    <string name="encrypt_instruction_content">To send an encrypted message to your friend, please follow these steps:\n
1. Ask your friend to generate a pair of keys and send the public key to you, keeping the private key on their hand (never send the private key).\n
2. Encrypt your message by the public key you received and send the encrypted message to your friend.\n
3. Ask your friend to decrypt the message by their private key.
    </string>
    <string name="encrypt_instruction_collapse">Collapse</string>

    <!--Literal converters-->
    <string name="converter_think_clean">Think clean</string>
    <string name="converter_chn">Raw chinese</string>
    <string name="converter_eng">Raw latin</string>
    <string name="converter_hex">Hex</string>

    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="please_confirm">Please confirm</string>

    <string name="copy_content">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="nothing_to_copy">Nothing to copy</string>
    <string name="text_has_changed">Text has already changed</string>
    <string name="translation_cannot_highlight">Not supported</string>

    <string name="translate_again">Apply again</string>
    <string name="date">Date</string>
    <string name="empty_history">Empty history</string>
    <string name="history_items_count">%s record(s)</string>
    <string name="manage">Manage</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Are you sure to delete selected item(s)?</string>
    <string name="delete_success">Deletion success</string>
    <string name="delete_failed">Deletion failed</string>
    <string name="demo">demo</string>

    <string name="history">History</string>
    <string name="clear">Clear</string>
    <string name="clear_confirm">Are you sure to clear translation history?</string>
    <string name="clear_success">All records deleted</string>
    <string name="clear_failed">Failed to clear records</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="day_before_yesterday">The day before yesterday</string>

    <string name="about">About</string>
    <string name="core_version">%s</string>
    <string name="app_version">Duck Son Translator %s</string>
    <string name="core_version_text">Core version</string>
    <string name="app_version_text">App version</string>
    <string name="app_description">Duck Son Translator is a funny software that translates Chinese into corresponding English words according to each English word. The software has a Mandarin translation version and a Chongqing dialect translation version, and has a variety of translation modes. Welcome to download.</string>
    <string name="brief_intro">Introduction</string>
    <string name="contacts">Contacts</string>
    <string name="email">E-mail</string>
    <string name="bug_report">Bug report</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="geglish_standard_association">Geglish Standards and Research Association</string>
    <string name="closed_beta_users">Close beta users</string>
    <string name="members">Members</string>
    <string name="version_info">Version info</string>
    <string name="studio_name">Trash Software Studio</string>

    <string name="welcome_text">Welcome to Duck Son Translator</string>
    <string name="updates_intro">We have very duck son\'s new features!</string>
    <string name="check_changelog">Check changelog</string>
    <string name="full_changelog">Full changelog</string>
    <string name="fold_changelog">Fold</string>
    <string name="update_contents">Updates: </string>

    <string name="more_settings">More settings</string>
    <string name="multi_language">Multi Language</string>
    <string name="language_setting">Language</string>
    <string name="click_switch_lang">Click to switch</string>
    <string name="language_system">System default (%s)</string>
    <string name="language_eng">English</string>
    <string name="language_chs">简体中文</string>
    <string name="language_geg">Geglish</string>

    <string-array name="contact_emails">
        <item>2676147693@qq.com</item>
        <item>826602899@qq.com</item>
    </string-array>

    <string-array name="rsa_bits_array">
        <item>16</item>
        <item>32</item>
        <item>64</item>
        <item>128</item>
        <item>256</item>
        <item>512</item>
        <item>1024</item>
    </string-array>

    <string-array name="language_list">
        <item>System default</item>
        <item>English</item>
        <item>简体中文</item>
        <item>Geglish</item>
    </string-array>

    <string-array name="dict_lang_list">
        <item>Chs-Geg</item>
    </string-array>

    <string-array name="dict_lang_list_values">
        <item>chs-geg</item>
    </string-array>

    <string-array name="language_list_values">
        <item>DEFAULT</item>
        <item>ENG</item>
        <item>CHS</item>
        <item>GEG</item>
    </string-array>

    <string-array name="word_picker_list">
        <item>Combined (Recommended)</item>
        <item>Common Prefix</item>
        <item>Frequency</item>
        <item>Random</item>
    </string-array>

    <string-array name="word_picker_list_values">
        <item>COMBINED_CHAR</item>
        <item>COMMON_PREFIX_CHAR</item>
        <item>INVERSE_FREQ_CHAR</item>
        <item>RANDOM_CHAR</item>
    </string-array>
</resources>