<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/historyMenuItem"
        android:icon="@drawable/ic_history_24"
        android:onClick="historyAction"
        android:title="@string/history" />

    <item
        android:id="@+id/changelogItem"
        android:icon="@drawable/ic_change_circle_24"
        android:onClick="changelogAction"
        android:title="@string/check_changelog" />

    <item
        android:id="@+id/appVersionItem"
        android:title="@string/app_version_text">

        <menu>
            <group>
                <item
                    android:id="@+id/coreVersionItem"
                    android:icon="@drawable/ic_settings_applications_24"
                    android:title="@string/core_version" />
                <item
                    android:onClick="aboutAction"
                    android:icon="@drawable/ic_info_black_24"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>

</menu>