<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="12dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/brief_intro_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/brief_intro"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_home_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/about_content_align"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        app:layout_constraintLeft_toLeftOf="@id/about_content_align"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brief_intro_label" />

    <TextView
        android:id="@+id/contacts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/contacts"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_mail_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_description_text" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintLeft_toLeftOf="@id/about_content_align"
        app:layout_constraintTop_toBottomOf="@id/contacts_label"
        app:layout_constraintWidth_percent="0.36" />

    <TextView
        android:id="@+id/email_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/email"
        app:layout_constraintLeft_toRightOf="@id/email_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/email_label" />

    <TextView
        android:id="@+id/acknowledgement_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/acknowledgements"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_workspace_premium_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_content" />

    <TextView
        android:id="@+id/association_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/geglish_standard_association"
        app:layout_constraintLeft_toLeftOf="@id/about_content_align"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acknowledgement_label" />

    <TextView
        android:id="@+id/cb_users_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/closed_beta_users"
        app:layout_constraintLeft_toLeftOf="@id/about_content_align"
        app:layout_constraintTop_toBottomOf="@id/association_label"
        app:layout_constraintWidth_percent="0.36" />

    <TextView
        android:id="@+id/cb_users"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/closed_beta_users"
        app:layout_constraintLeft_toRightOf="@id/cb_users_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/cb_users_label" />

    <TextView
        android:id="@+id/version_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/version_info"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_info_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_users" />

    <TextView
        android:id="@+id/app_version_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_version_text"
        app:layout_constraintLeft_toLeftOf="@id/about_content_align"
        app:layout_constraintTop_toBottomOf="@id/version_info_label"
        app:layout_constraintWidth_percent="0.36" />

    <TextView
        android:id="@+id/core_version_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/core_version_text"
        app:layout_constraintLeft_toLeftOf="@id/about_content_align"
        app:layout_constraintTop_toBottomOf="@id/app_version_label"
        app:layout_constraintWidth_percent="0.36" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/version_info_barrier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="app_version_label, core_version_label" />

    <TextView
        android:id="@+id/app_version_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/app_version"
        app:layout_constraintLeft_toRightOf="@id/version_info_barrier"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/app_version_label" />

    <TextView
        android:id="@+id/core_version_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/core_version"
        app:layout_constraintLeft_toRightOf="@id/version_info_barrier"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/core_version_label" />

    <TextView
        android:id="@+id/studio_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studio_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>