<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_outbox"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        app:endIconMode="clear_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dict_lang_dropdown_out"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/magnify_grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/up_box_hint"
            android:imeOptions="actionSearch"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dict_lang_dropdown_out"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/search_outbox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_outbox"
        app:layout_constraintTop_toTopOf="@id/search_outbox">

        <AutoCompleteTextView
            android:id="@+id/dict_lang_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/language_box_hint"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dict_result_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_outbox" />

    <TextView
        android:id="@+id/dict_no_result_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/dict_result_recycler"
        app:layout_constraintRight_toRightOf="@id/dict_result_recycler"
        app:layout_constraintTop_toTopOf="@id/dict_result_recycler" />

    <TextView
        android:id="@+id/dict_ad_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/duck_son_ad"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/search_word_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_word_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/magnify_white"
        android:onClick="searchDictAction"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>